[package]
name = "gtk-js-test"
version = "0.1.0"
edition = "2024"

[dependencies]
relm4 = { version = "0.10", features = ["libadwaita", "gnome_46"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt", "net", "macros", "time"] }
